--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
       flex-direction: column;
       align-items: center;
     }
-    header {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      background-color: #e7b77f;
-      position: fixed;
-      top: 0;
-      z-index: 1000;
-    }
+  header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px; /* Add padding to the left and right */
+  background-color: #e7b77f;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
     header h1 {
       margin: 0;
       font-size: 18px;
