--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 100px 120px; /* Add padding to the left and right */
+  padding: 10px 20px; /* Add padding to the left and right */
   background-color: #e7b77f;
   position: fixed;
   top: 0;
   z-index: 1000;
 }
 
+
+
+
     header h1 {
       margin: 0;
       font-size: 18px;
+        margin-left: 15px; /* Move the title 15px to the right */
       font-weight: bold;
     }
     .flag-selector {
@@ -95,7 +99,9 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
+.language-selector {
+  margin-right: 15px; /* Move the flags 15px to the left */
+}
     /* Reward button */
     .reward-button {
       margin-top: 20px;
