--- a/index.html
+++ b/index.html
@@ -148,15 +148,14 @@
     }
 
     .chat-container {
-      width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      height: 100vh; /* Full height of the viewport */
+      justify-content: flex-end; /* Push input to the bottom */
     }
 
     .chat-messages {
-      height: 80vh; /* Set height to 80% of the viewport height */
-      max-height: 80vh; /* Ensure it doesn't exceed this height */
+      height: 60vh; /* Set height to 60% of the viewport height */
       overflow-y: auto;
       border: 1px solid #ccc;
       border-radius: 5px;
